--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
+	<title>Forgot Password</title>
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-	<link rel="stylesheet" href="styles/css/main.css">
 	<script src="scripts/general.js"></script>
 	<script src="scripts/login.js"></script>
+	<script src="scripts/forgotPassword.js"></script>
+	<link rel="stylesheet" href="styles/css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -29,62 +30,25 @@
 			<div id="mobileBar">
 			</div>
 			<ul id="navBar">
-				<li class="selected"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="loggedin"><a href="logs.html">Logs</a></li>
-				<li class="loggedin"><a href="permissions.html">Manage Locks</a></li>
+				<li class="loggedin selected"><a href="permissions.html">Manage Locks</a></li>
 				<li class="loggedin"><a href="accessLocks.html">Access Locks</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
-			
 		</nav>
 	</header>
-	<main id="mainContent">
-		<div id="wrapFirst">
+	<main id="forgotPassword">
+		<h2>Forgot Password</h2>
+		<div class="forgotPassContent">
+			<p>Please enter the email address the new password will be sent into.</p>
+			<form method="post">
+				<input type="text" id="username" name="username">
+				<input id="forgotPassBtn" type="submit" name="submit" value="SUBMIT">
+			</form>
+			<p class="forgot-form-msg"></p>
 		</div>
-		<div id="news">
-			<img src="images/smartlock_nexus6p-portrait.png" alt="smartlock_app">
-			<div id="newsData">
-				<h2>Welcome</h2>
-				<p>The end of home keys</p>
-				<button class="read-more">READ MORE</button>
-			</div>
-		</div>
-		<div id="wrapperSec">
-			<section class="mainSec">Welcome to the most convenient and smart solution to lock your door.<br><br>
-
-			With this locking system, you can control your house's door from a distance without the need for physical proximity to the house!
-			This system gives the user simple access to door management through an application or website, allows management by removing and adding users and managing a wide number of locks.<br><br>
-
-			When ordering this system, you will get an electronic lock that connects to your door, a fingerprint reading system, and of course you can download and use our application.
-			The system was created in order to make it easier for the user to manage the entrances and exits from his home, with the intention of maintaining the privacy of the user in the best possible manner.<br><br>
-
-			For any problem, question and request you can always contact us through the contact page. We will be happy to answer all your questions.<br>
-			</section>
-		</div>
-		
-		
-		<div class="clear"></div>
-		<div id="wrapThird">
-			<section class="thirdSec">
-				<h2>creators</h2>
-				<div class="articles">
-					<article class="first">
-					<h3>Avital Glazer</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for the server side of the system and establishing the website.</p>
-				</article>
-				<article class="second">
-					<h3>Nir Schori</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for the hardware side including functionality on the server that allows interfacing with the lock.</p>
-				</article>
-				<article class="third">
-					<h3>Zohar Tzfanya</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for developing and designing the Android application.</p>
-				</article>	
-				</div>
-			</section>
-		</div>
-		
 	</main>
 	<div id="login-popup">
 		<div class="login-content">
