--- a/addPermission.html
+++ b/addPermission.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Home</title>
-	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+	<title>Add Permission</title>
 	<link href="https://fonts.googleapis.com/css?family=Aclonica" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 	<link rel="stylesheet" href="styles/css/main.css">
 	<script src="scripts/general.js"></script>
 	<script src="scripts/login.js"></script>
+	<script src="scripts/addPermission.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -19,7 +19,7 @@
 		<nav>
 			<ul id="anonymous">
 				<li id="login">Login</li>
-				<li id="open-account"><a href="openAccount.html">Open Account</a></li>
+				<li id="open-account" class="selected"><a href="openAccount.html">Open Account</a></li>
 			</ul>
 		</nav>
 		<nav>
@@ -29,7 +29,7 @@
 			<div id="mobileBar">
 			</div>
 			<ul id="navBar">
-				<li class="selected"><a href="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="loggedin"><a href="logs.html">Logs</a></li>
 				<li class="loggedin"><a href="permissions.html">Manage Locks</a></li>
 				<li class="loggedin"><a href="accessLocks.html">Access Locks</a></li>
@@ -40,51 +40,72 @@
 		</nav>
 	</header>
 	<main id="mainContent">
-		<div id="wrapFirst">
-		</div>
-		<div id="news">
-			<img src="images/smartlock_nexus6p-portrait.png" alt="smartlock_app">
-			<div id="newsData">
-				<h2>Welcome</h2>
-				<p>The end of home keys</p>
-				<button class="read-more">READ MORE</button>
-			</div>
-		</div>
-		<div id="wrapperSec">
-			<section class="mainSec">Welcome to the most convenient and smart solution to lock your door.<br><br>
-
-			With this locking system, you can control your house's door from a distance without the need for physical proximity to the house!
-			This system gives the user simple access to door management through an application or website, allows management by removing and adding users and managing a wide number of locks.<br><br>
-
-			When ordering this system, you will get an electronic lock that connects to your door, a fingerprint reading system, and of course you can download and use our application.
-			The system was created in order to make it easier for the user to manage the entrances and exits from his home, with the intention of maintaining the privacy of the user in the best possible manner.<br><br>
-
-			For any problem, question and request you can always contact us through the contact page. We will be happy to answer all your questions.<br>
-			</section>
-		</div>
-		
-		
-		<div class="clear"></div>
-		<div id="wrapThird">
-			<section class="thirdSec">
-				<h2>creators</h2>
-				<div class="articles">
-					<article class="first">
-					<h3>Avital Glazer</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for the server side of the system and establishing the website.</p>
-				</article>
-				<article class="second">
-					<h3>Nir Schori</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for the hardware side including functionality on the server that allows interfacing with the lock.</p>
-				</article>
-				<article class="third">
-					<h3>Zohar Tzfanya</h3>
-					<p>A student in software engineering at Shenkar College of Engineering and Design. Responsible for developing and designing the Android application.</p>
-				</article>	
-				</div>
-			</section>
-		</div>
-		
+		<section id="addPermission">
+			<h2>Add Permission</h2>
+			<div class="back">Back to manage</div>
+			<div>
+				<form action="" method="post">
+					<input type="email" name="username" placeholder="username" required>
+					<div class="freq">
+						<h3>Frequency</h3>
+						<label for="always">always</label><input type="radio" id="always" name="freq" value="always" required="">
+						<label for="once">once</label><input type="radio" id="once" name="freq" value="once" required="">
+					</div>
+					<div class="type">
+						<h3>type</h3>
+						<label for="manager">manager</label><input type="radio" id="manager" name="type" value="0" required="">
+						<label for="standard">standard</label><input type="radio" id="standard" name="type" value="2" required="">
+						<label for="fingerprint">with fingerprint</label><input type="radio" id="fingerprint" name="type" value="1" required="">
+					</div>
+					<div class="once">
+						<input type="date" name="date">
+						<label>start time</label><input type="time" name="start-time" value="00:00">
+						<label>end time</label><input type="time" name="end-time" value="00:00">	
+					</div>
+					<div class="always">
+						<section>
+							<h3>Sunday</h3>
+							<label>start time</label><input type="time" name="start1" value="00:00">
+							<label>end time</label><input type="time" name="end1" value="00:00">	
+						</section>
+						<section>
+							<h3>Monday</h3>
+							<label>start time</label><input type="time" name="start2" value="00:00">
+							<label>end time</label><input type="time" name="end2" value="00:00">
+						</section>
+						<section>
+							<h3>Tuesday</h3>
+							<label>start time</label><input type="time" name="start3" value="00:00">
+							<label>end time</label><input type="time" name="end3" value="00:00">	
+						</section>
+						<section>
+							<h3>Wednesday</h3>
+							<label>start time</label><input type="time" name="start4" value="00:00">
+							<label>end time</label><input type="time" name="end4" value="00:00">
+						</section>
+						<section>
+							<h3>Thursday</h3>
+							<label>start time</label><input type="time" name="start5" value="00:00">
+							<label>end time</label><input type="time" name="end5" value="00:00">
+						</section>
+						<section>
+							<h3>Friday</h3>
+							<label>start time</label><input type="time" name="start6" value="00:00">
+							<label>end time</label><input type="time" name="end6" value="00:00">
+						</section>
+						<section>
+							<h3>Saturday</h3>
+							<label>start time</label><input type="time" name="start7" value="00:00">
+							<label>end time</label><input type="time" name="end7" value="00:00">
+						</section>
+					</div>
+					
+					<input type="text" name="lock" placeholder="lock id"><br>
+					<button>SUBMIT</button>
+				</form>	
+			</div>	
+			<div class="error-msg"></div>
+		</section>
 	</main>
 	<div id="login-popup">
 		<div class="login-content">
